# Libra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: traffic.yml
Doc/: 1.Project_Structure.md  2.Toolchain_of_Libra.md  3.Docker_Setup.md  4.ModeSelectPass.md
Examples/add/: FlyHEContext.h  add.c  add.cu  add.mlir  add.opt.mlir  add.opt1.mlir  add.opt2.mlir  trans_cuadd.cu  trans_cuadd_v2.cu
Examples/means/: means.c  means.cu  means.mlir  means.opt.mlir
HElib/: .gitignore  CMakeLists.txt
HElib/LWE/: CMakeLists.txt
HElib/LWE/cuTFHEpp/: CMakeLists.txt
HElib/LWE/cuTFHEpp/include/: algmath.h  cloudkey.cuh  context.cuh  cuparams.cuh  cutfhe++.h  fft.cuh  gate.cuh  gatebootstrapping.cuh  keyswitch.cuh  progbootstrapping.cuh  serialize.h  tlwe.cuh  tlwe.h  tlwevaluator.cuh  trgsw.cuh  trlwe.cuh  types.h  utils.cuh
HElib/LWE/cuTFHEpp/include/util/: pointer.cuh
HElib/LWE/cuTFHEpp/src/: CMakeLists.txt  cutfhe++.cu  trlwe.txt
HElib/LWE/cuTFHEpp/test/: CMakeLists.txt
HElib/LWE/cuTFHEpp/test/fft/: CMakeLists.txt  fft.cu
HElib/LWE/cuTFHEpp/test/gatebootstrapping/: CMakeLists.txt  gatebootstrapping.cu
HElib/LWE/cuTFHEpp/test/keyswitch/: CMakeLists.txt  keyswitch.cu
HElib/LWE/examples/: CMakeLists.txt  cupbs.cu
HElib/RLWE/: CMakeLists.txt
HElib/RLWE/boot/: CMakeLists.txt
HElib/RLWE/boot/examples/: CMakeLists.txt  bootstrapping.cu  bootstrapping_alpha6.cu  mvm.cu  nn.cu  slim_boot.cu  test_lr.cu  test_rotate.cu  test_s2c.cu
HElib/RLWE/boot/include/: argmax.cuh  ckks_evaluator.txt  config.h  file.h  gelu.cuh  layer_norm.cuh  matrix_mul.cuh  softmax.cuh  trlwevaluator.cuh  utils.cuh
HElib/RLWE/boot/include/bootstrapping/: Bootstrapper.cuh  ModularReducer.cuh
HElib/RLWE/boot/include/bootstrapping/common/: Polynomial.cuh
HElib/RLWE/boot/src/: CMakeLists.txt  bootstrapping.cu  bootstrapping_alpha6.cu  ckks_evaluator.txt  gelu.cu  layer_norm.cu  main.cu  matrix_mul.cu  softmax.cu
HElib/RLWE/boot/src/bootstrapping/: Bootstrapper.cu  ModularReducer.cu
HElib/RLWE/boot/src/bootstrapping/common/: Polynomial.cu  Remez.cu
HElib/RLWE/phantom/: CMakeLists.txt  (+1 more)
HElib/RLWE/phantom/bitwise/: CMakeLists.txt
HElib/RLWE/phantom/bitwise/benchmarks/: CMakeLists.txt  bench_boolean-32bit.cu  bench_boolean.cu  bench_eval-function.cu  bench_fourstep_ntt.cu
HElib/RLWE/phantom/bitwise/examples/: CMakeLists.txt  bin-test-mult.cu  example_boolean-batch.cu  example_boolean.cu  example_eval-decomp.cu  example_eval-flooring.cu  example_eval-function-batch.cu  example_eval-function.cu  example_eval-sign.cu
HElib/RLWE/phantom/bitwise/include/: binfhe-base-scheme.cuh  binfhecontext.cuh  compact_ntt.cuh  fileio.h  kernel.cuh  modarith.cuh  rgsw-acc.cuh
HElib/RLWE/phantom/bitwise/include/arith/: big_integer.h  big_integer_modop.h  common.h  data_config.h  exception.h  int_vector.h  integer_interface.h  modulus.h  native_integer.h  nbtheory.h  numth_util.h
HElib/RLWE/phantom/bitwise/include/arith/prng/: blake2-impl.h  blake2.h  blake2engine.h  pseudorandomnumbergenerator.h
HElib/RLWE/phantom/bitwise/src/: CMakeLists.txt  binfhe-base-scheme-batch.cu  binfhe-base-scheme.cu  binfhecontext.cu  compact_ntt.cu  kernel-fuse.cu  kernel.cu  rgsw-acc-batch.cu  rgsw-acc.cu
HElib/RLWE/phantom/bitwise/src/arith/prng/: blake2b-ref.cpp  blake2xb-ref.cpp
HElib/RLWE/phantom/bitwise/tests/: CMakeLists.txt  test_fourstep_ntt.cu
HElib/RLWE/phantom/src/: CMakeLists.txt  ckks.cu  ckks_evaluator.cu  context.cu  eval_key_switch.cu  evaluate.cu  galois.cu  polymath.cu  prng.cu  rns.cu  rns_base.cu  secretkey.cu
HElib/benchmark/: CMakeLists.txt
HElib/benchmark/app/: CMakeLists.txt
HElib/benchmark/app/ckks-overflow/: CMakeLists.txt  dec-round.cu
HElib/benchmark/app/data/kmeans/: 16data4cent.csv  16data8cent.csv  32data8cent.csv  4data2cent.csv  4data3cent.csv  4data4cent.csv  5data2cent.csv  64data16cent.csv  8data2cent.csv  8data4cent.csv
HElib/benchmark/app/kmeans/: CMakeLists.txt  kmeans-boot-dim.cu  kmeans-boot-points-multicenters.cu  kmeans-boot-points.cu  kmeans-multi-scheme.cu  kmeans.cu
HElib/benchmark/app/repack/: CMakeLists.txt  repack.cu
HElib/benchmark/app/softmax/: CMakeLists.txt  softmax-mlti-scheme.cu  softmax.cu
HElib/benchmark/design/: CMakeLists.txt  compare.cu  fig.ipynb  findmin.cu  findmin.ipynb
HElib/benchmark/moti/single/: CMakeLists.txt  ckks-eval.cu  num.ipynb  tfhe-eval.cu  utils.h
HElib/benchmark/moti/single/data/: points.txt  res.txt
HElib/conversion/: CMakeLists.txt
HElib/conversion/example/: CMakeLists.txt  Lvl1L.cu  extract.cu  log.txt  mvm.cu  ntt.cu  repack.cu
HElib/conversion/include/: conversion.cuh  extract.cuh  operator.cuh  polyeval_bsgs.h  repack.h  rlwe.cuh  utils.h
HElib/conversion/src/: CMakeLists.txt  conversion.cu  extract.cu  polyeval_bsgs.cu  repack.cu  utils.cu
Libra/: CMakeLists.txt  main.cpp
Libra/Dialect/: CMakeLists.txt
Libra/Dialect/FlyHE/: CMakeLists.txt  FlyHETypes.cpp
Libra/Dialect/FlyHE/IR/: CMakeLists.txt  FlyHEDialect.cpp  FlyHEDialect.h  FlyHEDialect.td  FlyHEOps.cpp  FlyHEOps.h  FlyHEOps.td  FlyHETypes.h  FlyHETypes.td
Libra/Dialect/FlyHE/Pass/: CMakeLists.txt  FlyHEPass.cpp  FlyHEPass.h  FlyHEPass.td
Libra/Dialect/SIMD/: CMakeLists.txt
Libra/Dialect/SIMD/Common/: SIMDCommon.h
Libra/Dialect/SIMD/IR/: CMakeLists.txt  SIMDDialect.cpp  SIMDDialect.h  SIMDDialect.td  SIMDOps.cpp.old  SIMDOps.h  SIMDOps.td  SIMDTypes.cpp  SIMDTypes.cpp.old  SIMDTypes.h  SIMDTypes.td
Libra/Dialect/SIMD/Pass/: CMakeLists.txt  SIMDPass.cpp  SIMDPass.cpp.old1  SIMDPass.h  SIMDPass.td
Libra/Tools/: CMakeLists.txt
Libra/tools/: CMakeLists.txt
Libra/tools/opt/: CMakeLists.txt  libra-opt.cpp
Libra/tools/translate/: CMakeLists.txt  libra-translate.cpp
Script/: libra-mlir.sh  libra-opt.sh  libra-translate.sh
Test/MinED/: MinED.O0.mlir  MinED.c  MinED.cu  opt-MinED.O0.mlir
Test/Tool/: libra-mlir.sh  libra-opt.sh
Tool/: .gitignore
backup/: FlyHEOps.cpp  FlyHETypes.cpp
doc/: 2.Toolchain_of_Libra.md  make_libra  make_tool  roadmap
include/IR/: scfhe.td
sunnchioo/Libra/: README.md
(+146 files in other folders)
