include_directories(${CMAKE_CURRENT_SOURCE_DIR}/IR)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/IR)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Pass)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/Pass)
add_subdirectory(IR)
add_subdirectory(Pass)
# add_executable(FlyHETypes "FlyHETypes.cpp")
# target_link_libraries(FlyHETypes MLIRSCFHEDialect)